--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "expo": "^32.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-chart-kit": "^2.4.0",
+    "react-native-circular-progress": "^1.1.0",
+    "react-native-svg": "^9.3.6",
+    "react-navigation": "^3.5.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
